Remove usages of `maven-jar-plugin`